salesforce_sfdx/main/default/objects/User/fields/Airbnb_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Airbnb_User_Id__c</fullName>
    <label>Airbnb User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>