salesforce_sfdx/main/default/objects/User/fields/LDAP_AirbnbMailAlias__c.field-meta.xml
<CustomField>
    <fullName>LDAP_AirbnbMailAlias__c</fullName>
    <description>LDAP Airbnb Mail Alias</description>
    <label>LDAP Airbnb Mail Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>