salesforce_sfdx/main/default/objects/User/fields/LDAP_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>LDAP_Business_Unit__c</fullName>
    <description>LDAP Business Unit</description>
    <label>LDAP Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>