salesforce_sfdx/main/default/objects/User/fields/LDAP_Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>LDAP_Employee_Type__c</fullName>
    <description>LDAP Employee Type</description>
    <inlineHelpText>LDAP Employee Type</inlineHelpText>
    <label>LDAP Employee Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>