salesforce_sfdx/main/default/objects/User/fields/LDAP_Entry_DN__c.field-meta.xml
<CustomField>
    <fullName>LDAP_Entry_DN__c</fullName>
    <description>LDAP Entry DN</description>
    <inlineHelpText>LDAP Entry DN</inlineHelpText>
    <label>LDAP Entry DN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>