salesforce_sfdx/main/default/objects/User/fields/LDAP_Locale__c.field-meta.xml
<CustomField>
    <fullName>LDAP_Locale__c</fullName>
    <description>LDAP Locale</description>
    <inlineHelpText>LDAP Locale</inlineHelpText>
    <label>LDAP Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>