salesforce_sfdx/main/default/objects/User/fields/LDAP_Manager__c.field-meta.xml
<CustomField>
    <fullName>LDAP_Manager__c</fullName>
    <description>LDAP Manager</description>
    <inlineHelpText>LDAP Manager</inlineHelpText>
    <label>LDAP Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>