salesforce_sfdx/main/default/objects/User/fields/LDAP_Team__c.field-meta.xml
<CustomField>
    <fullName>LDAP_Team__c</fullName>
    <description>LDAP Team</description>
    <inlineHelpText>LDAP Team</inlineHelpText>
    <label>LDAP Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>