salesforce_sfdx/main/default/objects/User/fields/LDAP_UidNumber__c.field-meta.xml
<CustomField>
    <fullName>LDAP_UidNumber__c</fullName>
    <description>LDAP UidNumber</description>
    <inlineHelpText>LDAP UidNumber</inlineHelpText>
    <label>LDAP UidNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>